# probabilistic_shape_completion

./: .gitignore  .travis.yml  README.md  requirements.txt
bsaund_shape_completion/: CMakeLists.txt  package.xml  plugin_description.xml  setup.py
bsaund_shape_completion/scripts/: data_publisher.py  kinect_voxelizer.py  plausible_publisher.py  test_flow.py  wip_data_publisher.py
bsaund_shape_completion/src/: selection_widget.cpp  selection_widget.h  shape_selection_panel.cpp  shape_selection_panel.h
bsaund_shape_completion/src/bsaund_shape_completion/: sampling_tools.py  shape_selection.py  voxelgrid_publisher.py
mps_shape_completion/: .gitignore  CMakeLists.txt  download_model.sh  grid_saver.py  package.xml  ros_binvox_publisher.py  ros_data_publisher.py  ros_demo.py  shape_complete.py  shape_completion_node.py  shape_utils.py
mps_shape_completion/demo/: gt.binvox  non_occupy.binvox  occupy.binvox
mps_shape_completion/docker/: Dockerfile  setup.sh  test.sh
mps_shape_completion/tests/: demo_test.launch  demo_test.py  demo_test.test
mps_shape_completion_msgs/: CMakeLists.txt  package.xml
mps_shape_completion_visualization/: CMakeLists.txt  package.xml  plugin_description.xml
shape_completion_robot_demo/: CMakeLists.txt  package.xml  readme.md  setup.py
shape_completion_training/: .gitignore  CMakeLists.txt  augment_shapenet.py  copy_model.sh  dataset_wip.py  network_wip.py  package.xml  preprocess_shapenet.py  setup.py  train.py  wip.py
shape_completion_visualization/: CMakeLists.txt  package.xml  setup.py  shape_completion.rviz
(+153 files in other folders)
